# lorenzo

./: .docignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  deep-research-report (1).md  deep-research-report (4).md  package.json  requirements.txt  Комбинирование технологий для новых свойств - Claude  Поиск коллабораций AI проектов  Поиск уникальных проектов на Хабре для совместной разработки - Claude  Поиск уникальных проектов на Хабре для совместной разработки - Claude (1)
docs-toolkit/: .dockerignore  API.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  SECURITY.md  action.yml  docstoolkit.toml.example  pyproject.toml
docs-toolkit/bench/: __init__.py  runner.py
docs-toolkit/docs/: build.py  index.md  installation.md  plugins.md  rag.md
docs-toolkit/docstoolkit/: __init__.py  cli.py  config.py  core.py  doctor.py  frontmatter.py  plugins.py  serve.py
docs-toolkit/docstoolkit/agent/: __init__.py  builtin_tools.py  loop.py  planner.py  types.py
docs-toolkit/docstoolkit/auth/: __init__.py  keys.py  middleware.py  scopes.py
docs-toolkit/docstoolkit/budget/: __init__.py  tracker.py
docs-toolkit/docstoolkit/conversation/: __init__.py  store.py
docs-toolkit/docstoolkit/embeddings/: __init__.py  base.py  cache.py  cluster.py  dispatch.py  hybrid.py  sentence_transformers.py  tfidf.py  vectordb.py
docs-toolkit/docstoolkit/eval/: __init__.py  golden.py
docs-toolkit/docstoolkit/events/: __init__.py  bus.py  sinks.py
docs-toolkit/docstoolkit/experiments/: __init__.py  runner.py  types.py
docs-toolkit/docstoolkit/federation/: __init__.py  adapter.py  query.py  registry.py
docs-toolkit/docstoolkit/feedback/: __init__.py  store.py
docs-toolkit/docstoolkit/graph/: __init__.py  builder.py  export.py  ner.py
docs-toolkit/tests/: test_adaptive.py  test_agent.py  test_answerers.py  test_auth.py  test_bench.py  test_budget.py  test_cache.py  test_cloud_ingest.py  test_cluster.py  test_config.py  test_conversation.py  test_embeddings.py  test_eval.py  test_events.py  test_experiments.py  test_federation.py  test_feedback.py  test_frontmatter.py  test_graph.py  test_ingest.py  test_jobs.py  test_lang.py  test_multimodal.py  test_planner.py  test_prompts.py  test_rag.py  test_router.py  test_serve.py  test_skill_testing.py  test_streaming.py  test_telemetry.py  test_timetravel.py  test_vectordb.py  test_web.py  test_webhooks.py  test_workflow.py
(+5102 files in other folders)
