[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-toolkit"
version = "0.1.0"
description = "Universal toolkit for markdown documentation monorepos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lorenzo Project", email = "noreply@example.com"},
]
keywords = ["documentation", "markdown", "monorepo", "validation", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
llm = ["anthropic>=0.40.0"]
test = ["pytest>=7.0"]
all = ["mcp>=1.0.0", "anthropic>=0.40.0", "pytest>=7.0"]

[project.scripts]
docstoolkit = "docstoolkit.cli:main"

[project.urls]
Homepage = "https://github.com/svend4/lorenzo/tree/main/docs-toolkit"
Documentation = "https://github.com/svend4/lorenzo/tree/main/docs-toolkit#readme"
Repository = "https://github.com/svend4/lorenzo"
Issues = "https://github.com/svend4/lorenzo/issues"

[tool.setuptools.packages.find]
include = ["docstoolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
